raql-dotnet/RAQL.NET/Grammar/RAQLParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /Users/rchdeveloper/Documents/GitHub/api-query-language/raql-dotnet/RAQL.NET/Grammar/RAQL.g4 by ANTLR 4.9.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.2")]
[System.CLSCompliant(false)]
public partial class RAQLParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, IN=7, BASE_OPERATOR=8, 
		STRING_OPERATOR=9, NUMBER_OPERATOR=10, CONJUNCTIONS=11, NUMBER=12, WORD=13, 
		STRING=14, BOOLEAN=15, NULL=16;
	public const int
		RULE_clause = 0, RULE_conjunction = 1, RULE_operation = 2, RULE_string_array_operation = 3, 
		RULE_number_array_operation = 4, RULE_bool_array_operation = 5, RULE_array_operator = 6, 
		RULE_string_operation = 7, RULE_string_operator = 8, RULE_number_operation = 9, 
		RULE_number_operator = 10, RULE_bool_operation = 11, RULE_bool_operator = 12, 
		RULE_field = 13, RULE_nullstring = 14, RULE_string = 15, RULE_string_array = 16, 
		RULE_number = 17, RULE_number_array = 18, RULE_bool = 19, RULE_bool_array = 20;
	public static readonly string[] ruleNames = {
		"clause", "conjunction", "operation", "string_array_operation", "number_array_operation", 
		"bool_array_operation", "array_operator", "string_operation", "string_operator", 
		"number_operation", "number_operator", "bool_operation", "bool_operator", 
		"field", "nullstring", "string", "string_array", "number", "number_array", 
		"bool", "bool_array"
	};

	private static readonly string[] _LiteralNames = {
		null, "'('", "' '", "')'", "'['", "','", "']'", null, null, null, null, 
		null, null, null, null, null, "'null'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, "IN", "BASE_OPERATOR", "STRING_OPERATOR", 
		"NUMBER_OPERATOR", "CONJUNCTIONS", "NUMBER", "WORD", "STRING", "BOOLEAN", 
		"NULL"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "RAQL.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static RAQLParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public RAQLParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public RAQLParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ClauseContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public OperationContext operation() {
			return GetRuleContext<OperationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ClauseContext[] clause() {
			return GetRuleContexts<ClauseContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ClauseContext clause(int i) {
			return GetRuleContext<ClauseContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConjunctionContext conjunction() {
			return GetRuleContext<ConjunctionContext>(0);
		}
		public ClauseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_clause; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRAQLVisitor<TResult> typedVisitor = visitor as IRAQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitClause(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ClauseContext clause() {
		return clause(0);
	}

	private ClauseContext clause(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		ClauseContext _localctx = new ClauseContext(Context, _parentState);
		ClauseContext _prevctx = _localctx;
		int _startState = 0;
		EnterRecursionRule(_localctx, 0, RULE_clause, _p);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 54;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case IN:
			case BASE_OPERATOR:
			case STRING_OPERATOR:
			case NUMBER_OPERATOR:
			case WORD:
				{
				State = 43;
				operation();
				}
				break;
			case T__0:
				{
				State = 44;
				Match(T__0);
				State = 46;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__1) {
					{
					State = 45;
					Match(T__1);
					}
				}

				State = 48;
				clause(0);
				State = 50;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__1) {
					{
					State = 49;
					Match(T__1);
					}
				}

				State = 52;
				Match(T__2);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			Context.Stop = TokenStream.LT(-1);
			State = 62;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ClauseContext(_parentctx, _parentState);
					PushNewRecursionContext(_localctx, _startState, RULE_clause);
					State = 56;
					if (!(Precpred(Context, 1))) throw new FailedPredicateException(this, "Precpred(Context, 1)");
					State = 57;
					conjunction();
					State = 58;
					clause(2);
					}
					} 
				}
				State = 64;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class ConjunctionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CONJUNCTIONS() { return GetToken(RAQLParser.CONJUNCTIONS, 0); }
		public ConjunctionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_conjunction; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRAQLVisitor<TResult> typedVisitor = visitor as IRAQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConjunction(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConjunctionContext conjunction() {
		ConjunctionContext _localctx = new ConjunctionContext(Context, State);
		EnterRule(_localctx, 2, RULE_conjunction);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 65;
			Match(CONJUNCTIONS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OperationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Bool_array_operationContext bool_array_operation() {
			return GetRuleContext<Bool_array_operationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Number_array_operationContext number_array_operation() {
			return GetRuleContext<Number_array_operationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public String_array_operationContext string_array_operation() {
			return GetRuleContext<String_array_operationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Bool_operationContext bool_operation() {
			return GetRuleContext<Bool_operationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Number_operationContext number_operation() {
			return GetRuleContext<Number_operationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public String_operationContext string_operation() {
			return GetRuleContext<String_operationContext>(0);
		}
		public OperationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_operation; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRAQLVisitor<TResult> typedVisitor = visitor as IRAQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOperation(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OperationContext operation() {
		OperationContext _localctx = new OperationContext(Context, State);
		EnterRule(_localctx, 4, RULE_operation);
		try {
			State = 73;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 67;
				bool_array_operation();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 68;
				number_array_operation();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 69;
				string_array_operation();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 70;
				bool_operation();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 71;
				number_operation();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 72;
				string_operation();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class String_array_operationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public FieldContext field() {
			return GetRuleContext<FieldContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Array_operatorContext array_operator() {
			return GetRuleContext<Array_operatorContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public String_arrayContext string_array() {
			return GetRuleContext<String_arrayContext>(0);
		}
		public String_array_operationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_string_array_operation; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRAQLVisitor<TResult> typedVisitor = visitor as IRAQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitString_array_operation(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public String_array_operationContext string_array_operation() {
		String_array_operationContext _localctx = new String_array_operationContext(Context, State);
		EnterRule(_localctx, 6, RULE_string_array_operation);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 75;
			field();
			State = 76;
			array_operator();
			State = 77;
			string_array();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Number_array_operationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public FieldContext field() {
			return GetRuleContext<FieldContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Array_operatorContext array_operator() {
			return GetRuleContext<Array_operatorContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Number_arrayContext number_array() {
			return GetRuleContext<Number_arrayContext>(0);
		}
		public Number_array_operationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_number_array_operation; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRAQLVisitor<TResult> typedVisitor = visitor as IRAQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNumber_array_operation(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Number_array_operationContext number_array_operation() {
		Number_array_operationContext _localctx = new Number_array_operationContext(Context, State);
		EnterRule(_localctx, 8, RULE_number_array_operation);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 79;
			field();
			State = 80;
			array_operator();
			State = 81;
			number_array();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Bool_array_operationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public FieldContext field() {
			return GetRuleContext<FieldContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Array_operatorContext array_operator() {
			return GetRuleContext<Array_operatorContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Bool_arrayContext bool_array() {
			return GetRuleContext<Bool_arrayContext>(0);
		}
		public Bool_array_operationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_bool_array_operation; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRAQLVisitor<TResult> typedVisitor = visitor as IRAQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBool_array_operation(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Bool_array_operationContext bool_array_operation() {
		Bool_array_operationContext _localctx = new Bool_array_operationContext(Context, State);
		EnterRule(_localctx, 10, RULE_bool_array_operation);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 83;
			field();
			State = 84;
			array_operator();
			State = 85;
			bool_array();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Array_operatorContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IN() { return GetToken(RAQLParser.IN, 0); }
		public Array_operatorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_array_operator; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRAQLVisitor<TResult> typedVisitor = visitor as IRAQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitArray_operator(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Array_operatorContext array_operator() {
		Array_operatorContext _localctx = new Array_operatorContext(Context, State);
		EnterRule(_localctx, 12, RULE_array_operator);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 87;
			Match(IN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class String_operationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public FieldContext field() {
			return GetRuleContext<FieldContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public String_operatorContext string_operator() {
			return GetRuleContext<String_operatorContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StringContext @string() {
			return GetRuleContext<StringContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NullstringContext nullstring() {
			return GetRuleContext<NullstringContext>(0);
		}
		public String_operationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_string_operation; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRAQLVisitor<TResult> typedVisitor = visitor as IRAQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitString_operation(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public String_operationContext string_operation() {
		String_operationContext _localctx = new String_operationContext(Context, State);
		EnterRule(_localctx, 14, RULE_string_operation);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 89;
			field();
			State = 90;
			string_operator();
			State = 93;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case STRING:
				{
				State = 91;
				@string();
				}
				break;
			case NULL:
				{
				State = 92;
				nullstring();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class String_operatorContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BASE_OPERATOR() { return GetToken(RAQLParser.BASE_OPERATOR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING_OPERATOR() { return GetToken(RAQLParser.STRING_OPERATOR, 0); }
		public String_operatorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_string_operator; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRAQLVisitor<TResult> typedVisitor = visitor as IRAQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitString_operator(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public String_operatorContext string_operator() {
		String_operatorContext _localctx = new String_operatorContext(Context, State);
		EnterRule(_localctx, 16, RULE_string_operator);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 95;
			_la = TokenStream.LA(1);
			if ( !(_la==BASE_OPERATOR || _la==STRING_OPERATOR) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Number_operationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public FieldContext field() {
			return GetRuleContext<FieldContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Number_operatorContext number_operator() {
			return GetRuleContext<Number_operatorContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NumberContext number() {
			return GetRuleContext<NumberContext>(0);
		}
		public Number_operationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_number_operation; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRAQLVisitor<TResult> typedVisitor = visitor as IRAQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNumber_operation(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Number_operationContext number_operation() {
		Number_operationContext _localctx = new Number_operationContext(Context, State);
		EnterRule(_localctx, 18, RULE_number_operation);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 97;
			field();
			State = 98;
			number_operator();
			State = 99;
			number();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Number_operatorContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BASE_OPERATOR() { return GetToken(RAQLParser.BASE_OPERATOR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NUMBER_OPERATOR() { return GetToken(RAQLParser.NUMBER_OPERATOR, 0); }
		public Number_operatorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_number_operator; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRAQLVisitor<TResult> typedVisitor = visitor as IRAQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNumber_operator(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Number_operatorContext number_operator() {
		Number_operatorContext _localctx = new Number_operatorContext(Context, State);
		EnterRule(_localctx, 20, RULE_number_operator);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 101;
			_la = TokenStream.LA(1);
			if ( !(_la==BASE_OPERATOR || _la==NUMBER_OPERATOR) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Bool_operationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public FieldContext field() {
			return GetRuleContext<FieldContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Bool_operatorContext bool_operator() {
			return GetRuleContext<Bool_operatorContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BoolContext @bool() {
			return GetRuleContext<BoolContext>(0);
		}
		public Bool_operationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_bool_operation; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRAQLVisitor<TResult> typedVisitor = visitor as IRAQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBool_operation(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Bool_operationContext bool_operation() {
		Bool_operationContext _localctx = new Bool_operationContext(Context, State);
		EnterRule(_localctx, 22, RULE_bool_operation);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 103;
			field();
			State = 104;
			bool_operator();
			State = 105;
			@bool();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Bool_operatorContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BASE_OPERATOR() { return GetToken(RAQLParser.BASE_OPERATOR, 0); }
		public Bool_operatorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_bool_operator; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRAQLVisitor<TResult> typedVisitor = visitor as IRAQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBool_operator(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Bool_operatorContext bool_operator() {
		Bool_operatorContext _localctx = new Bool_operatorContext(Context, State);
		EnterRule(_localctx, 24, RULE_bool_operator);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 107;
			Match(BASE_OPERATOR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FieldContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] WORD() { return GetTokens(RAQLParser.WORD); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode WORD(int i) {
			return GetToken(RAQLParser.WORD, i);
		}
		public FieldContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_field; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRAQLVisitor<TResult> typedVisitor = visitor as IRAQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitField(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FieldContext field() {
		FieldContext _localctx = new FieldContext(Context, State);
		EnterRule(_localctx, 26, RULE_field);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 112;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==WORD) {
				{
				{
				State = 109;
				Match(WORD);
				}
				}
				State = 114;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NullstringContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NULL() { return GetToken(RAQLParser.NULL, 0); }
		public NullstringContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_nullstring; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRAQLVisitor<TResult> typedVisitor = visitor as IRAQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNullstring(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NullstringContext nullstring() {
		NullstringContext _localctx = new NullstringContext(Context, State);
		EnterRule(_localctx, 28, RULE_nullstring);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 115;
			Match(NULL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
